Followed Devise's suggested steps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,8 @@
       <%= render 'layouts/footer' %>
     </div>
 
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
 </body>
 </html>
