Updates to header. Adding footer.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
         <%= menu_item "Home", root_path %>
         <%= menu_item "Career Paths", careers_path %>
         <%= menu_item "How It Works", about_path %>
-        <%= menu_item "Sign In", about_path %>
+        <%= menu_item "Sign In", '#' %>
     <% end %>
     <%= menu_group :pull => :right do %>
     <% end %>
