--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,11 @@
 <footer class="footer">
-  <small>
-
-  </small>
-  <nav>
-    <ul>
+  <div class="container">
+    <ul class="nav pull-right"> 
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Privacy", '#' %></li>
       <li><%= link_to "How it works", '#' %></li>
       <li><%= link_to "Become a mentor", '#' %></li>
       <li><%= link_to "Contact", '#' %></li>
     </ul>
-  </nav>
+  </div >
 </footer>
