--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <ul class="nav pull-right"> 
+    <ul class="footer-links pull-right"> 
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Privacy", '#' %></li>
       <li><%= link_to "How it works", '#' %></li>
