--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+    <div class="container">
+      <div class="row">
+      <div class="messages span9">
+        <%= bootstrap_flash %>
+      </div>
+      </div>
+      <div class="row">
+        <%= render_breadcrumbs %>
+        <%= yield %>
+      </div>
+    </div>
