One big ole commit.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
 <footer class="footer">
   <div class="container">
-    <ul class="footer-links pull-right"> 
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Link</a></li>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Privacy", '#' %></li>
       <li><%= link_to "How it works", '#' %></li>
