--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,26 @@
-<%= nav_bar :fixed => :top, :brand => "E-mentoring Appication", :responsive => true do %>
-    <%= menu_group :pull => :right do %>
-        <%= menu_item "Home", root_path %>
-        <%= menu_item "Career Paths", careers_path %>
-        <%= menu_item "How It Works", about_path %>
-        <%= menu_item "Sign In", '#' %>
-    <% end %>
-<% end %>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">E-Mentor Application</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Career Paths", careers_path %></li>
+        <li><%= link_to "How It Works", about_path %></li>
+        <li><%= link_to "Sign In", '#' %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
