Adding modules folder and some base styles and linking it all up.

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -22,7 +22,8 @@ $header-font-weight: $bold;
 // Colors
 $black: #000000;
 $white: #ffffff;
-$pink: #c27ba0;
+$desaturated-pink: #c27ba0;
+$desaturated-violet: #8E7CC3;
 
 //OTHER BASE STYLES
 
