--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,29 @@
-<body>
-	<div class="container">
-		<div class="index-career-background">
-    	<h1>Hello, world!</h1>
+
+	<div class="index-career-background">
+		<div class="row">
+  	  <h1>Get advice from Nashville's Women Technologist and plan for your future</h1>
+    </div>
+    <div class="btn-group">
+  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Find a Mentor", root_path, class: "brand" %></button>
+  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Become a Mentor", root_path, class: "brand" %></button>
   	</div>
-	</div>
-</body>
+  </div>
+
+<div class="index-features">
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img data-src="holder.js/100%x180" alt="...">
+    </a>
+  </div>
+</div>
+
+<div class="index-career-paths">
+		<div class="row">
+  	  <h1>Get advice from Nashville's Women Technologist and plan for your future</h1>
+    </div>
+    <div class="btn-group">
+  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Find a Mentor", root_path, class: "brand" %></button>
+  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Become a Mentor", root_path, class: "brand" %></button>
+  	</div>
+  </div>
