--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,29 +1,82 @@
-
-	<div class="index-career-background">
-		<div class="row">
-  	  <h1>Get advice from Nashville's Women Technologist and plan for your future</h1>
-    </div>
-    <div class="btn-group">
-  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Find a Mentor", root_path, class: "brand" %></button>
-  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Become a Mentor", root_path, class: "brand" %></button>
-  	</div>
+<div class="index-signup">
+	<div class="row">
+	  <h1>Get advice from Nashville's Women Technologists and plan for your future</h1>
   </div>
+	  <button type="button" class="btn btn-default featured-button" data-toggle="dropdown"><%= link_to "Find a Mentor", root_path %></button>
+	  <button type="button" class="btn btn-default featured-button" data-toggle="dropdown"><%= link_to "Become a Mentor", root_path %></button>
+</div>
 
 <div class="index-features">
-<div class="row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img data-src="holder.js/100%x180" alt="...">
-    </a>
+  <div class="row">
+
+    <div class="col-xs-12 col-md-4">
+      <div class="featured-image">
+        <%= link_to(image_tag("http://webzealous.com/images/profile-image.jpg", :alt => "", :class => "img-responsive forced-height", :id => "featured-image-2"), root_path) %>
+          <h4 class="header-link"><%= link_to "Selling Point", "#" %></h4>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4">
+      <div class="featured-image">
+        <%= link_to(image_tag("http://webzealous.com/images/profile-image.jpg", :alt => "", :class => "img-responsive forced-height", :id => "featured-image-2"), root_path) %>        
+          <h4 class="header-link"><%= link_to "Selling Point", "#" %></h4>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4">  
+      <div class="featured-image">
+        <%= link_to(image_tag("http://webzealous.com/images/profile-image.jpg", :alt => "", :class => "img-responsive forced-height", :id => "featured-image-2"), root_path) %>
+          <h4 class="header-link"><%= link_to "Selling Point", "#" %></h4>
+      </div>
+    </div>
+
   </div>
 </div>
 
 <div class="index-career-paths">
-		<div class="row">
-  	  <h1>Get advice from Nashville's Women Technologist and plan for your future</h1>
-    </div>
-    <div class="btn-group">
-  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Find a Mentor", root_path, class: "brand" %></button>
-  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><%= link_to "Become a Mentor", root_path, class: "brand" %></button>
-  	</div>
+
+  <div class="row">
+    <h1>Explore Career Paths</h1>
   </div>
+
+  <!-- Row 1 -->
+  <div class="row row-padding">
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Software Developer", "#" %></h4>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Network Engineer", "#" %></h4>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "User Experience", "#" %></h4>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Systems Administrator", "#" %></h4>
+    </div>
+  </div>
+
+  <!-- Row 2 -->
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Software Developer", "#" %></h4>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Network Engineer", "#" %></h4>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "User Experience", "#" %></h4>
+    </div>
+    <div class="col-xs-12 col-md-3">
+      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Systems Administrator", "#" %></h4>
+    </div>
+  </div>
+  
+</div>
