--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -6,7 +6,7 @@ $regular: 400;
 $bold: 600;
 
 // Base Font
-$base-font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+$base-font-family: 'Source Sans Pro', sans-serif;
 $base-font-weight: $regular;
 $base-font-size: 13px;
 $base-line-height: 1.4;
@@ -22,8 +22,12 @@ $header-font-weight: $bold;
 // Colors
 $black: #000000;
 $white: #ffffff;
-$desaturated-pink: #c27ba0;
-$desaturated-violet: #8E7CC3;
+$very-light-pink: #FF71CD;
+$soft-magenta: #CC67E8;
+$very-light-violet: #AF7EFF;
+$very-soft-blue: #B6B7E8;
+$very-light-blue: #94C0FF;
+$gray: #4E4E4E;
 
 //OTHER BASE STYLES
 
@@ -32,4 +36,19 @@ body {
   font-family: $fixed-font-family;
   padding: 0;
   margin: 0;
+  background-color: $gray;
+}
+
+a {
+  color: $very-light-blue;
+  &:hover {
+  	text-decoration: none;
+  }
+  &.navbar-brand {
+  	font-size: 2em;
+  }
+}
+
+.row-padding {
+	padding-bottom: 2%;
 }
