--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap';
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,600,900);
 @import 'base/base';
 @import 'modules/index';
 
