--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -41,42 +41,52 @@
 
   <!-- Row 1 -->
   <div class="row row-padding">
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "Software Developer", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-backend.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Back End Engineering", "#" %></h4>
     </div>
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "Network Engineer", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-dba.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Database Administration", "#" %></h4>
     </div>
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "User Experience", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-frontend.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Front End Engineering", "#" %></h4>
     </div>
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "Systems Administrator", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-gamedev.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Game Development", "#" %></h4>
     </div>
+
   </div>
 
   <!-- Row 2 -->
   <div class="row">
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "Software Developer", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-softwareengineering.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Software Development", "#" %></h4>
     </div>
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "Network Engineer", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-qa.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Quality Assurance", "#" %></h4>
     </div>
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+      <%= link_to(image_tag("career-icons/icon-ux.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
         <h4 class="header-link-dark-background"><%= link_to "User Experience", "#" %></h4>
     </div>
+
     <div class="col-xs-12 col-md-3">
-      <%= link_to(image_tag("featured-image-1.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
-        <h4 class="header-link-dark-background"><%= link_to "Systems Administrator", "#" %></h4>
+      <%= link_to(image_tag("career-icons/icon-webdev.jpg", :alt => "", :class => "selling-point-image img-responsive img-circle"), root_path) %>
+        <h4 class="header-link-dark-background"><%= link_to "Web Development", "#" %></h4>
     </div>
+
   </div>
   
 </div>
