--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">E-Mentor Application</a>
+      <a class="navbar-brand" href="#">Bridgit: E-Mentor Application</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
