--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -1,10 +1,23 @@
-<% provide(:title, 'Search For a Mentor') %>
 <h2>Search For a Mentor</h2>
 <div class="row">
   <% @mentors.each do |mentor| %>
       <div class="col-xs-4 col-sm-3 col-md-2">
-        <%= link_to((image_tag "#{mentor.photo_url}", alt: "{mentor.last_name}", title: "#{mentor.first_name + " " + mentor.last}"), "/mentor/#{mentor.id}", class: "thumbnail") %>
+        <%= link_to((image_tag "#{mentor.photo_url}", alt: "{mentor.last_name}", title: "#{mentor.first_name + " " + mentor.last}"), "/mentor/#{mentor.id}", class: "findthumbnail") %>
       </div>
   <% end %>
 </div>
 
+
+<div class="row">
+  <% @mentors.each do |mentor| %>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img data-src="holder.js/300x200" alt="...">
+          <div class="caption">
+            <h3>Thumbnail label</h3>
+            <p>...</p>
+            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          </div>
+        </div>
+    </div>
+</div>
