Another big ole last minute commit related to static career pages. Also, added a new div and style to the static pages of about, privacy, and careers.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,9 +8,11 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
-	    <p class="content-container">
-				In 2014, through the collaborative efforts of the Design for America Vanderbilt Studio and Nashville Girl Geek Dinner, a website was created geared towards connecting high school and college aged girls and young women with women mentors in the community. The goal of the website is to create an education portal where young girls can learn about the different job opportunities that exist in the field of software and technology as well as form relationships with women mentors in the community in a safe, unobtrusive, encouraging way. Our women mentors are available to answer questions and be accessible for informational conversations and/or shadowing opportunities. By creating a profile, you will identify areas of interest and be matched with mentors who share those areas of interest as areas of expertise. Come be a part of this unique and evolving web mentoring site!
-			</p>
+	    <div class="content-container">
+	    	<p>
+					In 2014, through the collaborative efforts of the Design for America Vanderbilt Studio and Nashville Girl Geek Dinner, a website was created geared towards connecting high school and college aged girls and young women with women mentors in the community. The goal of the website is to create an education portal where young girls can learn about the different job opportunities that exist in the field of software and technology as well as form relationships with women mentors in the community in a safe, unobtrusive, encouraging way. Our women mentors are available to answer questions and be accessible for informational conversations and/or shadowing opportunities. By creating a profile, you will identify areas of interest and be matched with mentors who share those areas of interest as areas of expertise. Come be a part of this unique and evolving web mentoring site!
+			  </p>
+			</div>
 	  </div>
 	</div>
 </div>
