--- a/app/views/static_pages/careers.html.erb
+++ b/app/views/static_pages/careers.html.erb
@@ -1,2 +1,18 @@
-<h1>Careers</h1>
-<p>Find me in app/views/static_pages/careers.html.erb</p>
+<div class="container-pink-background">
+	<div class="row">
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
+		  <header class="content-header">
+	      <h1>Careers</h1>
+	    </header>
+	  </div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
+	    <div class="content-container">
+	    	<p>
+				  Explore career page coming soon!
+			  </p>
+			</div>
+	  </div>
+	</div>
+</div>
