--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -1,2 +1,18 @@
-<h1>Privacy</h1>
-<p>Find me in app/views/static_pages/privacy.html.erb</p>
+<div class="container-pink-background">
+	<div class="row">
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
+		  <header class="content-header">
+	      <h1>Privacy</h1>
+	    </header>
+	  </div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
+	    <div class="content-container">
+	    	<p>
+					Privacy policy coming soon. In the meantime, if you are a privacy and security expert, we'd love your help in building this project!
+			  </p>
+			</div>
+	  </div>
+	</div>
+</div>
